descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2008-09-XX  Release 7.13.0                                     ---
----------------------------------------------------------------------

* nirt dest command now avoids overwriting existing files - Cliff Yapp
* fixed mged_players error on tra in classic mode mged  - Bob Parker
* fix attr behavior when setting the region attribute - C. Yapp
* identified fix for "Illegal instruction" bug in rt - Simon Clubley
* mged get_regions and reid ignore duplicate regions - Sean Morrison
* added procedural geometry tools to the Windows port
	- Bob Parker, Andre Castelo
* integrated tgf-g with the default compile/install - Daniel Roßberg
* deprecated the mged '-n' option, use '-c' instead - Sean Morrison
* added the ability to invoke mged through icons/menus - Sean Morrison
* new -a option to mged 'killtree' for killing references - Bob Parker
* added new 'killrefs' command to mged - Bob Parker
* added -C color option to the mged 'E' command - Bob Parker
* fixed curvature calc bug in ehy primitive - Timothy Van Ruitenbeek
* added compilation support for MSVC 9 - André Castelo


----------------------------------------------------------------------
--- 2008-06-XX  Release 7.12.6                                     ---
----------------------------------------------------------------------

This release enhances the formatting options available "out of the
box" for the NIRT tool, allowing users to easily select different
data reporting options without having to define their own custom
configuration files.  CSV output options also allow for quick
and easy import into spreadsheets.  The new -L option lists available
formats.

The tire tool's behavior has been improved - it will no longer
overwrite pre-existing files and a "w" flag now accepts a value of